@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2009  Vasco Nunes, Piotr Ożarowski
 
 
+2009-01-17  Piotr Ożarowski
+	* Use MediumBLOB on MySQL to store posters. Database has to be recreated if 0.10-beta1 was used to create it.
+
 2009-01-16  Piotr Ożarowski
 	* Print move details during startup in debug mode
 
